[gd_scene load_steps=2 format=3 uid="uid://2ld3cbsgamqo"]

[ext_resource type="Script" uid="uid://ex1liynxcp0c" path="res://main_hub.gd" id="1_ig7tw"]

[node name="MainHub" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ig7tw")
cell_size_param = Vector2(250, 250)

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1159.0
offset_bottom = 650.0
color = Color(0.1764706, 0.5176471, 0.5137255, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 0
offset_right = 1145.0
offset_bottom = 645.0
alignment = 1

[node name="lbl_title" type="Label" parent="ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
size_flags_stretch_ratio = 16.1
theme_override_font_sizes/font_size = 30
text = "Quest√µes"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
size_flags_stretch_ratio = 5.15

[node name="grid_thumbs" type="GridContainer" parent="ColorRect/VBoxContainer/MarginContainer"]
layout_mode = 2
columns = 3

[node name="pagination_row" type="HBoxContainer" parent="ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
alignment = 1

[node name="btn_prev" type="Button" parent="ColorRect/VBoxContainer/pagination_row"]
layout_mode = 2
size_flags_horizontal = 3

[node name="lbl_page" type="Label" parent="ColorRect/VBoxContainer/pagination_row"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 9.4

[node name="btn_next" type="Button" parent="ColorRect/VBoxContainer/pagination_row"]
layout_mode = 2
size_flags_horizontal = 3
